--- a/style.css
+++ b/style.css
@@ -30,4 +30,10 @@
   height: 100%;
 }
 
+@media screen and (max-width: 850px) {
+  #logo-img {
+    display: none;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
