--- a/style.scss
+++ b/style.scss
@@ -28,4 +28,11 @@
         width:100%;
         height: 100%;
     }
+    
+}
+
+@media screen and (max-width:850px){
+    #logo-img{
+        display:none;
+    }
 }
